2006-05-12  Derek Atkins <derek@ihtfp.com>

	* goffice-config.h.in:
	* gsf-config.h.in:
	  Make sure to properly define _GNU_SOURCE in sub-config files.
	  The build was broken without this.

	* src/engine/gnc-engine.c:
	  Use QSF #defines instead of hard-coding the library name and init-fcn

	* lib/libqof/qof/Makefile.am:
	  change the name of our qof library
	* lib/libqof/backend/file/Makefile.am:
	  change the name of our qsf library
	* lib/libqof/qof/qof.h:
	  point to the newly named qsf library
	* configure.in:
	  Error out if the user calls --enable-qof
	  Change the name of the internal qof library and directories
	  so that our qof can co-exist with a "native" qof

2006-05-12  Christian Stimming <stimming@tuhh.de>

	* src/import-export/hbci/gnc-plugin-hbci.c: Add the Tools->HBCI
	Setup menu item to the register tabs as well. Bug#341510.

2006-05-10  Derek Atkins  <derek@ihtfp.com>

	* src/import-export/qif-io-core/qif-parse.scm:
	  Same patch as qif-import/qif-parse.scm for guile-1.8.

	* configure.in: add $GUILE_INCS when testing g-wrap

2006-05-10  Christian Stimming <stimming@tuhh.de>

	* accounts/de_AT/*: Added new Austrian German account templates by
	Roman Bertle <bertle@smoerz.org>.

2006-05-09  Derek Atkins  <derek@ihtfp.com>

	* src/import-export/qif-import/qif-parse.scm:
	  Bill Nottingham's patch to fix a guile parser problem during build.

2006-05-07  Joshua Sled  <jsled@asynchronous.org>

	* src/engine/Group.c (xaccAccountStagedTransactionTraversal):
	Simplify.

	* src/engine/test-core/test-engine-stuff.c (make_trans_query):
	Don't construct queries involving empty strings, as the query
	processor asserts that string match terms are not empty. Fixes
	`test-query` failure.

	* src/gnome/dialog-scheduledxaction.c (sxd_close_handler):
	Actually close the dialog when we are button-requested to Close
	the dialog, thus cleaning up properly.  Bug#340936.

	* src/register/register-gnome/formulacell-gnome.c